server/jsmm/y.output

state 0
	$accept: .final $end 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	tokenEOF  shift 3
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 2
	final  goto 1
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 1
	$accept:  final.$end 

	$end  accept
	.  error


state 2
	final:  expr.tokenEOF 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	tokenAnd  shift 31
	tokenOr  shift 32
	tokenEOF  shift 19
	tokenEqu  shift 25
	tokenNeq  shift 26
	tokenLte  shift 29
	tokenGte  shift 30
	tokenLt  shift 27
	tokenGt  shift 28
	'+'  shift 20
	'-'  shift 21
	'/'  shift 22
	'*'  shift 23
	'%'  shift 24
	'.'  shift 33
	'['  shift 34
	.  error


state 3
	final:  tokenEOF.    (2)

	.  reduce 2 (src line 41)


state 4
	expr:  '!'.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 35
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 5
	expr:  '-'.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 36
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 6
	expr:  '('.expr ')' 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 37
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 7
	expr:  tokenInteger.    (19)

	.  reduce 19 (src line 60)


state 8
	expr:  tokenFloat.    (20)

	.  reduce 20 (src line 61)


state 9
	expr:  tokenString.    (21)

	.  reduce 21 (src line 62)


state 10
	expr:  tokenBoolean.    (22)

	.  reduce 22 (src line 63)


state 11
	expr:  tokenNull.    (23)

	.  reduce 23 (src line 64)


state 12
	expr:  attribute.    (24)

	.  reduce 24 (src line 65)


state 13
	expr:  arraydef.    (25)

	.  reduce 25 (src line 66)


state 14
	expr:  objectdef.    (26)

	.  reduce 26 (src line 67)


state 15
	expr:  call.    (27)

	.  reduce 27 (src line 68)


state 16
	attribute:  tokenIdentifier.    (30)
	call:  tokenIdentifier.'(' clist ')' 
	call:  tokenIdentifier.'(' ')' 

	'('  shift 38
	.  reduce 30 (src line 74)


state 17
	arraydef:  '['.alist ']' 
	arraydef:  '['.']' 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	']'  shift 40
	'{'  shift 18
	.  error

	expr  goto 41
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14
	alist  goto 39

state 18
	objectdef:  '{'.olist '}' 
	objectdef:  '{'.'}' 

	tokenString  shift 44
	tokenIdentifier  shift 45
	'}'  shift 43
	.  error

	olist  goto 42

state 19
	final:  expr tokenEOF.    (1)

	.  reduce 1 (src line 40)


state 20
	expr:  expr '+'.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 46
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 21
	expr:  expr '-'.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 47
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 22
	expr:  expr '/'.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 48
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 23
	expr:  expr '*'.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 49
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 24
	expr:  expr '%'.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 50
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 25
	expr:  expr tokenEqu.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 51
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 26
	expr:  expr tokenNeq.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 52
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 27
	expr:  expr tokenLt.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 53
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 28
	expr:  expr tokenGt.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 54
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 29
	expr:  expr tokenLte.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 55
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 30
	expr:  expr tokenGte.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 56
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 31
	expr:  expr tokenAnd.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 57
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 32
	expr:  expr tokenOr.expr 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 58
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 33
	attribute:  expr '.'.tokenIdentifier 
	call:  expr '.'.tokenIdentifier '(' clist ')' 
	call:  expr '.'.tokenIdentifier '(' ')' 

	tokenIdentifier  shift 59
	.  error


state 34
	attribute:  expr '['.expr ']' 
	call:  expr '['.expr ']' '(' clist ')' 
	call:  expr '['.expr ']' '(' ')' 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	'{'  shift 18
	.  error

	expr  goto 60
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14

state 35
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	expr:  '!' expr.    (16)
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	'+'  shift 20
	'-'  shift 21
	'/'  shift 22
	'*'  shift 23
	'%'  shift 24
	'.'  shift 33
	'['  shift 34
	.  reduce 16 (src line 57)


state 36
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	expr:  '-' expr.    (17)
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	.  reduce 17 (src line 58)


state 37
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	expr:  '(' expr.')' 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	tokenAnd  shift 31
	tokenOr  shift 32
	tokenEqu  shift 25
	tokenNeq  shift 26
	tokenLte  shift 29
	tokenGte  shift 30
	tokenLt  shift 27
	tokenGt  shift 28
	'+'  shift 20
	'-'  shift 21
	'/'  shift 22
	'*'  shift 23
	'%'  shift 24
	'.'  shift 33
	'['  shift 34
	')'  shift 61
	.  error


state 38
	call:  tokenIdentifier '('.clist ')' 
	call:  tokenIdentifier '('.')' 

	tokenString  shift 9
	tokenIdentifier  shift 16
	tokenInteger  shift 7
	tokenFloat  shift 8
	tokenBoolean  shift 10
	tokenNull  shift 11
	'!'  shift 4
	'-'  shift 5
	'['  shift 17
	'('  shift 6
	')'  shift 63
	'{'  shift 18
	.  error

	expr  goto 64
	attribute  goto 12
	call  goto 15
	arraydef  goto 13
	objectdef  goto 14
	clist  goto 62

state 39
	arraydef:  '[' alist.']' 
	alist:  alist.',' expr 

	']'  shift 65
	','  shift 66
	.  error


state 40
	arraydef:  '[' ']'.    (40)

	.  reduce 40 (src line 90)


state 41
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 
	alist:  expr.    (41)

	tokenAnd  shift 31
	tokenOr  shift 32
	tokenEqu  shift 25
	tokenNeq  shift 26
	tokenLte  shift 29
	tokenGte  shift 30
	tokenLt  shift 27
	tokenGt  shift 28
	'+'  shift 20
	'-'  shift 21
	'/'  shift 22
	'*'  shift 23
	'%'  shift 24
	'.'  shift 33
	'['  shift 34
	.  reduce 41 (src line 93)


state 42
	objectdef:  '{' olist.'}' 
	olist:  olist.',' tokenString ':' expr 
	olist:  olist.',' tokenIdentifier ':' expr 

	','  shift 68
	'}'  shift 67
	.  error


state 43
	objectdef:  '{' '}'.    (44)

	.  reduce 44 (src line 98)


state 44
	olist:  tokenString.':' expr 

	':'  shift 69
	.  error


state 45
	olist:  tokenIdentifier.':' expr 

	':'  shift 70
	.  error


state 46
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (3)
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	'/'  shift 22
	'*'  shift 23
	'%'  shift 24
	'.'  shift 33
	'['  shift 34
	.  reduce 3 (src line 44)


state 47
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (4)
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	'/'  shift 22
	'*'  shift 23
	'%'  shift 24
	'.'  shift 33
	'['  shift 34
	.  reduce 4 (src line 45)


state 48
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (5)
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	'.'  shift 33
	'['  shift 34
	.  reduce 5 (src line 46)


state 49
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (6)
	expr:  expr.'%' expr 
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	'.'  shift 33
	'['  shift 34
	.  reduce 6 (src line 47)


state 50
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'/' expr 
	expr:  expr.'*' expr 
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (7)
	expr:  expr.tokenEqu expr 
	expr:  expr.tokenNeq expr 
	expr:  expr.tokenLt expr 
	expr:  expr.tokenGt expr 
	expr:  expr.tokenLte expr 
	expr:  expr.tokenGte expr 
	expr:  expr.tokenAnd expr 
	expr:  expr.tokenOr expr 
	attribute:  expr.'.' tokenIdentifier 
	attribute:  expr.'[' expr ']' 
	call:  expr.'.' tokenIdentifier '(' clist ')' 
	call:  expr.'.' tokenIdentifier '(' ')' 
	call:  expr.'[' expr ']' '(' clist ')' 
	call:  expr.'[' expr ']' '(' ')' 

	'.'  shift 33
	'['  shift 34
	.  reduce 7 (src line 48)

